fix swagger import and change eslint indent to tab
