# swagger-output.json
@@ -11,377 +11,6 @@
     "http"
   ],
   "paths": {
-    "/customer/{cpf}": {
-      "get": {
-        "tags": [
-          "Customer"
-        ],
-        "description": "Endpoint to get customer by CPF.",
-        "parameters": [
-          {
-            "name": "cpf",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "default": {
-            "description": ""
-          }
-        }
-      }
-    },
-    "/customer/": {
-      "get": {
-        "tags": [
-          "Customer"
-        ],
-        "description": "Endpoint to get all customers.",
-        "responses": {
-          "404": {
-            "schema": {
-              "type": "object",
-              "properties": {
-                "msg": {
-                  "type": "string",
-                  "example": "Customers not found."
-                }
-              },
-              "xml": {
-                "name": "main"
-              }
-            },
-            "description": "Not Found"
-          }
-        }
-      },
-      "post": {
-        "tags": [
-          "Customer"
-        ],
-        "description": "Endpoint to add a customer.",
-        "parameters": [
-          {
-            "name": "newCustomer",
-            "in": "body",
-            "description": "Information customer.",
-            "required": true,
-            "schema": {
-              "$ref": "#/definitions/AddCustomer"
-            }
-          }
-        ],
-        "responses": {
-          "default": {
-            "description": ""
-          }
-        }
-      }
-    },
-    "/customer/confirmationCode": {
-      "post": {
-        "tags": [
-          "Customer"
-        ],
-        "description": "Endpoint to validate a customer on cognito.",
-        "parameters": [
-          {
-            "name": "validateCustomer",
-            "in": "body",
-            "description": "Information customer cognito.",
-            "required": true,
-            "schema": {
-              "$ref": "#/definitions/ValidateCustomer"
-            }
-          }
-        ],
-        "responses": {
-          "default": {
-            "description": ""
-          }
-        }
-      }
-    },
-    "/customer/authenticateUser": {
-      "post": {
-        "tags": [
-          "Customer"
-        ],
-        "description": "Endpoint to authenticate a customer on cognito.",
-        "parameters": [
-          {
-            "name": "validateCustomer",
-            "in": "body",
-            "description": "Information customer cognito.",
-            "required": true,
-            "schema": {
-              "$ref": "#/definitions/AuthenticateCustomer"
-            }
-          }
-        ],
-        "responses": {
-          "default": {
-            "description": ""
-          }
-        }
-      }
-    },
-    "/customer/{id}": {
-      "put": {
-        "tags": [
-          "Customer"
-        ],
-        "description": "Endpoint to update customer by ID.",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          },
-          {
-            "name": "updateCustomer",
-            "in": "body",
-            "description": "Information customer.",
-            "required": true,
-            "schema": {
-              "$ref": "#/definitions/AddCustomer"
-            }
-          }
-        ],
-        "responses": {
-          "default": {
-            "description": ""
-          }
-        }
-      },
-      "delete": {
-        "tags": [
-          "Customer"
-        ],
-        "description": "Endpoint to delete customer by ID.",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "default": {
-            "description": ""
-          }
-        }
-      }
-    },
-    "/category/": {
-      "get": {
-        "tags": [
-          "Category"
-        ],
-        "description": "Endpoint to list all categories.",
-        "responses": {
-          "default": {
-            "description": ""
-          }
-        }
-      },
-      "post": {
-        "tags": [
-          "Category"
-        ],
-        "description": "Endpoint to add category.",
-        "parameters": [
-          {
-            "name": "newCategory",
-            "in": "body",
-            "description": "Information category.",
-            "required": true,
-            "schema": {
-              "$ref": "#/definitions/AddCategory"
-            }
-          }
-        ],
-        "responses": {
-          "default": {
-            "description": ""
-          }
-        }
-      }
-    },
-    "/category/{id}": {
-      "get": {
-        "tags": [
-          "Category"
-        ],
-        "description": "Endpoint to get category by ID.",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "default": {
-            "description": ""
-          }
-        }
-      },
-      "put": {
-        "tags": [
-          "Category"
-        ],
-        "description": "Endpoint to update customer by ID.",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          },
-          {
-            "name": "updateCategory",
-            "in": "body",
-            "description": "Information do category.",
-            "required": true,
-            "schema": {
-              "$ref": "#/definitions/AddCategory"
-            }
-          }
-        ],
-        "responses": {
-          "default": {
-            "description": ""
-          }
-        }
-      },
-      "delete": {
-        "tags": [
-          "Category"
-        ],
-        "description": "Endpoint to delete category by ID.",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "default": {
-            "description": ""
-          }
-        }
-      }
-    },
-    "/product/": {
-      "get": {
-        "tags": [
-          "Product"
-        ],
-        "description": "Endpoint to get all products.",
-        "responses": {
-          "default": {
-            "description": ""
-          }
-        }
-      },
-      "post": {
-        "tags": [
-          "Product"
-        ],
-        "description": "Endpoint to add product.",
-        "parameters": [
-          {
-            "name": "newProduct",
-            "in": "body",
-            "description": "Information product.",
-            "required": true,
-            "schema": {
-              "$ref": "#/definitions/AddProduct"
-            }
-          }
-        ],
-        "responses": {
-          "default": {
-            "description": ""
-          }
-        }
-      }
-    },
-    "/product/{id}": {
-      "get": {
-        "tags": [
-          "Product"
-        ],
-        "description": "Endpoint to get product by ID.",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "default": {
-            "description": ""
-          }
-        }
-      },
-      "put": {
-        "tags": [
-          "Product"
-        ],
-        "description": "Endpoint to update product by ID.",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          },
-          {
-            "name": "updateProduct",
-            "in": "body",
-            "description": "Information customer.",
-            "required": true,
-            "schema": {
-              "$ref": "#/definitions/AddProduct"
-            }
-          }
-        ],
-        "responses": {
-          "default": {
-            "description": ""
-          }
-        }
-      },
-      "delete": {
-        "tags": [
-          "Product"
-        ],
-        "description": "Endpoint to delete product by ID.",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "default": {
-            "description": ""
-          }
-        }
-      }
-    },
     "/status/": {
       "get": {
         "tags": [
@@ -522,8 +151,12 @@
             "in": "body",
             "description": "Information order.",
             "required": true,
-            "schema": {
+            "chema": {
               "$ref": "#/definitions/AddOrder"
+            },
+            "schema": {
+              "type": "object",
+              "properties": {}
             }
           }
         ],
@@ -625,19 +258,6 @@
             }
           }
         ],
-        "responses": {
-          "default": {
-            "description": ""
-          }
-        }
-      }
-    },
-    "/webhook/": {
-      "post": {
-        "tags": [
-          "Webhook"
-        ],
-        "description": "Endpoint used to webhook payment automation.",
         "responses": {
           "default": {
             "description": ""
